--- a/index.html
+++ b/index.html
@@ -112,6 +112,21 @@
                 <div class="col-md-9">
                     <h2 class="mb-3">最近更新文章</h2>
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-02-28">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-2-28-node-share-links.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 2月28日20.9M/S|免费VPN/SSR/V2ray/Clash/Shadowrocket免费节点订阅分享" src="/uploads/20241222-1/ae775f129fc26565e44171425f168292.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-2-28-node-share-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 2月28日20.9M/S|免费VPN/SSR/V2ray/Clash/Shadowrocket免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了加拿大、美国、新加坡、香港、日本、欧洲、韩国等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-02-27">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-2-27-free-node-subscribe-links.htm" class="xcblog-blog-url">
@@ -316,16 +331,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-2-24-clash-v2ray-ss-ssr.htm" title="VPN设备 | 2月24日20M/S|免费VPN/SSR/Shadowrocket/V2ray/Clash免费节点订阅分享">VPN设备 | 2月24日20M/S|免费VPN/SSR/Shadowrocket/V2ray/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-58312.htm" title="动物疫苗是什么单位负责的（动物疫苗是什么单位负责的呢）">动物疫苗是什么单位负责的（动物疫苗是什么单位负责的呢）</a></li>
-                        <li class="py-2"><a href="/news/article-63560.htm" title="淮北小动物救助站（淮北小动物救助站电话）">淮北小动物救助站（淮北小动物救助站电话）</a></li>
-                        <li class="py-2"><a href="/news/article-60032.htm" title="广州领养宠物救助站地址电话（广州领养宠物救助站地址电话是多少）">广州领养宠物救助站地址电话（广州领养宠物救助站地址电话是多少）</a></li>
-                        <li class="py-2"><a href="/news/article-61775.htm" title="狗粮猫粮加工设备什么牌子好一点（宠物狗粮加工设备）">狗粮猫粮加工设备什么牌子好一点（宠物狗粮加工设备）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-2-19-free-v2ray.htm" title="VPN设备 | 2月19日18.3M/S|免费VPN/Shadowrocket/SSR/V2ray/Clash免费节点订阅分享">VPN设备 | 2月19日18.3M/S|免费VPN/Shadowrocket/SSR/V2ray/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-63559.htm" title="生物颗粒燃烧炉到底咋样（生物颗粒燃烧机怎么样）">生物颗粒燃烧炉到底咋样（生物颗粒燃烧机怎么样）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-2-27-free-node-subscribe-links.htm" title="VPN设备 | 2月27日20.3M/S|免费VPN/V2ray/SSR/Shadowrocket/Clash免费节点订阅分享">VPN设备 | 2月27日20.3M/S|免费VPN/V2ray/SSR/Shadowrocket/Clash免费节点订阅分享</a></li>
                         <li class="py-2"><a href="/news/article-60611.htm" title="附近有没有养狗的（离我家最近的养狗场）">附近有没有养狗的（离我家最近的养狗场）</a></li>
-                        <li class="py-2"><a href="/news/article-62967.htm" title="linux 硬盘满了如何处理">linux 硬盘满了如何处理</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-2-26-node-share.htm" title="VPN设备 | 2月26日20.5M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享">VPN设备 | 2月26日20.5M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-62379.htm" title="动物防疫中心站（动物防疫中心站是干嘛）">动物防疫中心站（动物防疫中心站是干嘛）</a></li>
+                        <li class="py-2"><a href="/news/article-57745.htm" title="青岛市动物疫病预防控制中心怎么样（青岛市动物疫病预防控制中心主任）">青岛市动物疫病预防控制中心怎么样（青岛市动物疫病预防控制中心主任）</a></li>
+                        <li class="py-2"><a href="/news/article-59464.htm" title="宠物猫要多少钱（宠物猫多少钱?）">宠物猫要多少钱（宠物猫多少钱?）</a></li>
+                        <li class="py-2"><a href="/news/article-61177.htm" title="动物疫苗生产厂家排名榜最新名单（动物疫苗生产企业排行）">动物疫苗生产厂家排名榜最新名单（动物疫苗生产企业排行）</a></li>
+                        <li class="py-2"><a href="/news/article-60032.htm" title="广州领养宠物救助站地址电话（广州领养宠物救助站地址电话是多少）">广州领养宠物救助站地址电话（广州领养宠物救助站地址电话是多少）</a></li>
+                        <li class="py-2"><a href="/news/article-58312.htm" title="动物疫苗是什么单位负责的（动物疫苗是什么单位负责的呢）">动物疫苗是什么单位负责的（动物疫苗是什么单位负责的呢）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-2-23-clash-v2ray-ss-ssr.htm" title="VPN设备 | 2月23日19.8M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享">VPN设备 | 2月23日19.8M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-2-21-node-share-links.htm" title="VPN设备 | 2月21日21.8M/S|免费VPN/SSR/Shadowrocket/V2ray/Clash免费节点订阅分享">VPN设备 | 2月21日21.8M/S|免费VPN/SSR/Shadowrocket/V2ray/Clash免费节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -337,7 +352,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">39</span> <a href="/date/2025-02/" title="2025-02 归档">2025-02</a></h4>
+                <h4><span class="badge" style="float: right;">42</span> <a href="/date/2025-02/" title="2025-02 归档">2025-02</a></h4>
             </li>
                     </ul>
     </div>
